fixed z-index

--- a/css/style.scss
+++ b/css/style.scss
@@ -154,6 +154,8 @@ body {
 
         .header__content__text {
             max-width: 470px;
+            z-index: 5;
+            position: relative;
 
             @media only screen and (min-width: 1440px) {
                 max-width: 800px;
